kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: myapp-ingress
  namespace: secondBrain

spec:
  rules:
    - host: secondbrain.visheshxdevs.in

      http:
        paths:
          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend
                port:
                  number: 8080

          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend
                port:
                  number: 3000
